# oratio

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/agents/: opinion-aggregator.md  script-writer.md  transcript-investigator.md
.claude/skills/oratio/: SKILL.md
agents/: corpus-script-critic.md  corpus-script-writer.md  era-aggregator.md  interview-finder.md  script-critic.md  script-writer.md  transcript-critic.md
examples/: dale_schuurmans_llms_as_universal_computers.md  dale_schuurmans_name_mode_overview.md
scripts/: smoke_sdk.py  synth_batch.py  synth_dale.py
skills/chorus/: SKILL.md
skills/oratio/: SKILL.md
src/chorus/: doctor.py  orchestrator.py
src/chorus/annotate/: __init__.py  markdown.py
src/chorus/kokoro_tts/: synthesize.py
src/chorus/youtube_search/: find.py
src/oratio/: doctor.py  orchestrator.py
src/oratio/annotate/: __init__.py  markdown.py
src/oratio/kokoro_tts/: synthesize.py
src/oratio/youtube_fetcher/: fetch.py
src/oratio/youtube_search/: __init__.py  find.py
