[project]
name = "oratio"
version = "0.1.0"
description = "Turn a thought leader's interviews into a two-voice podcast via Kokoro TTS"
requires-python = ">=3.11,<3.13"
dependencies = [
    "yt-dlp>=2025.1.15",
    "kokoro>=0.9.2",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "pydub>=0.25.1",
    "pysbd>=0.3.4",
    "torch>=2.2",
    "claude-agent-sdk>=0.1.66",
]

[project.scripts]
oratio = "oratio.orchestrator:main"
oratio-fetch = "oratio.youtube_fetcher.fetch:main"
oratio-find = "oratio.youtube_search.find:main"
oratio-tts = "oratio.kokoro_tts.synthesize:main"
oratio-doctor = "oratio.doctor:main"
oratio-annotate = "oratio.annotate.markdown:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oratio"]
