[project]
name = "chorus"
version = "0.2.0"
description = "Turn a YouTube URL or a thought leader's name into a two-voice podcast via Kokoro TTS"
requires-python = ">=3.11,<3.13"
dependencies = [
    "yt-dlp>=2025.1.15",
    "kokoro>=0.9.2",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "pydub>=0.25.1",
    "pysbd>=0.3.4",
    "torch>=2.2",
    "claude-agent-sdk>=0.1.66",
]

[project.scripts]
chorus = "chorus.orchestrator:main"
chorus-fetch = "chorus.youtube_fetcher.fetch:main"
chorus-find = "chorus.youtube_search.find:main"
chorus-tts = "chorus.kokoro_tts.synthesize:main"
chorus-doctor = "chorus.doctor:main"
chorus-annotate = "chorus.annotate.markdown:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chorus"]
